--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,7 @@ fabric.properties
 .idea/**/azureSettings.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/webstorm
+
+.idea/JetClient/
+
+.idea/
